# midil-kit

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: package-lock.json  sidebars.js
docs/docs/: auth_documentation.md
docs/docs/modules/: __README.md  _category_.json  auth.md  extensions.md  http.md  logger.md  midilapi.md
docs/event/: config.md  context.md  event_bus.md  exceptions.md  message.md  utils.md
docs/event/consumer/: sqs.md  webhook.md  websocket.md
docs/event/producer/: base.md  redis.md  sqs.md
docs/event/scheduler/: aws_event_bridge.md  repeat.md
docs/event/subscriber/: base.md  middlewares.md
examples/event/: standalone_consumer.py  standalone_producer.py  telemetry.py
midil/: version.py
midil/cli/commands/: launch.py  version.py
midil/event/: config.py  event_bus.py
midil/event/connector/: __init__.py  base.py  health.py  registry.py
midil/event/consumer/: http_polling.py  stripe.py
midil/event/observability/: __init__.py  hooks.py  store.py  trace.py  tracing.py
midil/event/producer/: base.py  redis.py  sqs.py
midil/event/subscriber/: base.py
midil/midilapi/: config.py  exceptions.py  midilapi.md  responses.py
midil/midilapi/pagination/: __init__.py  models.py
pymidil/: __init__.py  settings.py  version.py
pymidil/auth/: __init__.py
pymidil/auth/cognito/: __init__.py  client_credentials_flow.py  jwt_authorizer.py
pymidil/auth/interfaces/: authenticator.py  authorizer.py
pymidil/cli/commands/: init.py  launch.py  test.py  version.py
pymidil/event/: __init__.py  config.py  event_bus.py  tracing.py
pymidil/event/_examples/: event_bus.py  standalone_consumer.py  standalone_producer.py  webhook_producer.py
pymidil/event/consumer/: sqs.py
pymidil/event/observability/: __init__.py  emitter.py  envelope.py  hooks.py  store.py  trace.py  tracing.py
pymidil/event/producer/: base.py  redis.py  sqs.py
pymidil/http_client/: __init__.py  client.py
pymidil/logger/: config.py  factory.py  setup.py
pymidil/midilapi/: __init__.py  config.py  exceptions.py  responses.py
pymidil/observability/: __init__.py  dispatch_hook.py  hooks.py  store.py
pymidil/utils/: models.py
pymidil/web/: __init__.py  exceptions.py  openapi.py
tests/client/: test_client.py
tests/event/: test_context.py  test_named_consumers.py  test_producer_trace.py  test_telemetry_emitter.py  test_telemetry_integration.py  test_tracing.py
tests/http_client/: test_client.py
(+72 files in other folders)
