[tool.poetry]
name = "midil"
version = "3.4.4"
description = "A Python SDK for backend systems development @midil.io"
authors = ["Engr. Michael Kofi Armah <michael.armah@midil.io>"]
readme = "README.md"
keywords = ["midil", "sdk", "infrastructure", "platform"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

packages = [{ include = "midil" }]
package-mode = true

[tool.poetry.scripts]
midil = "midil:cli"

[tool.poetry.dependencies]
python = "^3.12"

pydantic = "^2.0.0"
pydantic-settings = "^2.10.1"

aiostream = "^0.7.0"

loguru = "^0.7.3"

tenacity = "^9.1.2"

tomli = "^2.2.1"

rich = { version = "^14.1.0", optional = true }
python-dateutil = { version = "^2.8.0", optional = true }
httpx = { version = "^0.28.1", optional = true }
pyjwt = { version = "^2.10.1", extras = ["crypto"], optional = true }
click = { version = "^8.1.7", optional = true }
pyfiglet = { version = "^1.0.4", optional = true }
cookiecutter = { version = "^2.5.1", optional = true }
fastapi = { version = "^0.116.1", optional = true }
starlette = { version = "^0.45.1", optional = true }
uvicorn = { version = "^0.29.0", optional = true }
aioboto3 = { version = "^15.0.0", optional = true }
redis = { version = "^5.2.1", extras = ["asyncio"], optional = true }
pymongo = { version = "^4.0.0", extras = ["srv"], optional = true }

[tool.poetry.extras]
auth    = ["httpx", "pyjwt", "python-dateutil"]
cli     = ["click", "pyfiglet", "cookiecutter", "rich"]
web     = ["fastapi", "starlette", "uvicorn"]
aws     = ["aioboto3"]
redis   = ["redis"]
mongodb = ["pymongo"]
full = [
    "httpx", "pyjwt", "python-dateutil",
    "click", "pyfiglet", "cookiecutter", "rich",
    "fastapi", "starlette", "uvicorn",
    "aioboto3", "redis", "pymongo"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^4.0.0"
trio = "^0.30.0"
black = "^23.0.0"
isort = "^5.12.0"
ruff = ">=0.6.3,<0.10.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
types-python-dateutil = "^2.9.0.20250708"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
